--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@quasar/extras": "^1.0.0",
     "core-js": "^3.6.4",
+    "quasar": "^1.0.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
@@ -22,11 +24,14 @@
     "@vue/eslint-config-airbnb": "^5.0.2",
     "@vue/test-utils": "1.0.0-beta.31",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-transform-imports": "^1.5.0",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.13.0",
+    "postcss-rtl": "^1.2.3",
     "sass-loader": "^8.0.2",
+    "vue-cli-plugin-quasar": "~2.0.0",
     "vue-template-compiler": "^2.6.11"
   }
 }
