--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint --ext .js,.vue"
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "autoprefixer": "^9.7.6",
     "core-js": "^3.6.4",
+    "postcss-rtl": "^1.2.3",
     "quasar": "^1.0.0",
     "vue": "^2.6.11"
   },
@@ -25,11 +27,11 @@
     "@vue/test-utils": "1.0.0-beta.31",
     "babel-eslint": "^10.1.0",
     "babel-plugin-transform-imports": "^1.5.0",
-    "eslint": "^6.7.2",
+    "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.13.0",
-    "postcss-rtl": "^1.2.3",
     "sass-loader": "^8.0.2",
     "vue-cli-plugin-quasar": "~2.0.0",
     "vue-template-compiler": "^2.6.11"
